--- a/Blocks/paragraph/paragraph.css
+++ b/Blocks/paragraph/paragraph.css
@@ -2,7 +2,8 @@
   width: 100%;
   font-family: "Inter", Arial, sans-serif;
   font-size: 15px;
+  font-weight: 400;
   margin: 0;
-  line-height: 1.8;
+  line-height: 1.6;
   color: hsl(236, 13%, 42%);
 }
