--- a/Blocks/menu/menu.css
+++ b/Blocks/menu/menu.css
@@ -1,10 +1,11 @@
 .menu {
   font-family: "Inter", Arial, sans-serif;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
+  line-height: 1;
   display: flex;
   align-items: center;
-  gap: 40px;
+  gap: 38px;
   color: hsl(236, 13%, 42%);
 }
 
