--- a/Blocks/title/title.css
+++ b/Blocks/title/title.css
@@ -2,13 +2,14 @@
   margin: 0;
   font-family: "Inter", Arial, sans-serif;
   grid-area: title;
-  font-size: 55px;
+  font-size: 57px;
   font-weight: 800;
-  line-height: 1;
+  line-height: 56px
 }
 
 @media screen and (max-width: 600px) {
   .title {
     font-size: 40px;
+    line-height: 43px;
   }
 }
